--- a/FictitiousInsurance/FictitiousInsurance.Common/FictitiousInsurance.Common.csproj
+++ b/FictitiousInsurance/FictitiousInsurance.Common/FictitiousInsurance.Common.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Exceptions\TechnicalExceptions.cs" />
+    <Compile Include="Models\ApiResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
