Unit testing samples and code cleanup

--- a/FictitiousInsurance/FictitiousInsurance.Test/FictitiousInsurance.Test.csproj
+++ b/FictitiousInsurance/FictitiousInsurance.Test/FictitiousInsurance.Test.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusinessService\CustomerServiceTest.cs" />
+    <Compile Include="BusinessService\PaymentServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
