--- a/FictitiousInsurance/FictitiousInsurance.API/Web.config
+++ b/FictitiousInsurance/FictitiousInsurance.API/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <appSettings>
-    <add key="InputFileLocation" value="D:\Work n Studies\FictitionsFiles\DueCustomers\Customer.csv"/>
-    <add key="OutputFileLocation" value="D:\Work n Studies\FictitionsFiles\DueCustNotifFiles"/>
-    <add key="RenealNotifFileTemplate" value="D:\Work n Studies\FictitionsFiles\DueCustomers\Templates\RenealNotification.txt"/>
+    <add key="InputFileLocation" value="D:\RLG_CaseStudy\DueCustomers\Customer.csv"/>
+    <add key="OutputFileLocation" value="D:\RLG_CaseStudy\DueCustNotifFiles"/>
+    <add key="RenewalNotifFileTemplate" value="D:\RLG_CaseStudy\DueCustomers\Templates\RenealNotification.txt"/>
     <add key="NotifFileNameTemplate" value="PolicyDueLetter_{0}_{1}.txt"/>
   </appSettings>
   <system.web>
