--- a/FictitiousInsurance/FictitiousInsurance.API/FictitiousInsurance.API.csproj
+++ b/FictitiousInsurance/FictitiousInsurance.API/FictitiousInsurance.API.csproj
@@ -114,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="Readme.txt" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
