--- a/FictitiousInsurance/FictitiousInsurance.Test/FictitiousInsurance.Test.csproj
+++ b/FictitiousInsurance/FictitiousInsurance.Test/FictitiousInsurance.Test.csproj
@@ -74,13 +74,13 @@
       <Project>{74E3B162-FF37-4DBE-B252-B4AF863E6F79}</Project>
       <Name>FictitiousInsurance.Business</Name>
     </ProjectReference>
+    <ProjectReference Include="..\FictitiousInsurance.Common\FictitiousInsurance.Common.csproj">
+      <Project>{9D3A4740-DD73-455C-8EA3-125B1C99D333}</Project>
+      <Name>FictitiousInsurance.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FictitiousInsurance.DataAccess\FictitiousInsurance.DataAccess.csproj">
       <Project>{29712A5F-B9FC-44DF-8BBF-63CD9A0A2C7B}</Project>
       <Name>FictitiousInsurance.DataAccess</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FictitiousInsurance.Model\FictitiousInsurance.Model.csproj">
-      <Project>{6D70FCFF-2F44-41A1-B76C-5C61A82AA2C1}</Project>
-      <Name>FictitiousInsurance.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
